--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   mask_text_input_formatter: ^2.1.0
   easy_localization: ^3.0.0
   flutter_easyloading: ^3.0.3
-  dio: ^4.0.4
+  dio: ^4.0.0
   flutter_native_splash: ^2.1.0
   geolocator: ^8.2.0
   image_picker: ^0.8.4+10
   get: ^4.6.1
+  http_parser: ^4.0.0
 
 dev_dependencies:
   flutter_test:
